--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "axios": "^0.12.0",
     "babel-preset-stage-1": "^6.5.0",
+    "lodash": "^4.13.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.1",
+    "react-sparklines": "^1.5.2",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3"
   }
